--- a/README
+++ b/README
@@ -10,6 +10,6 @@ When playing the app game "Letter Press," given the board letters it can either 
 
 //IMPORTANT:
 
-There is a great txt file full of American English words listed.
-The file is at this time too big to be previewed here on GitHub, but you may open the raw version on your browser. Feel free to download the file itself for some projects you may utilize. Credit given to author of: http://svnweb.freebsd.org/base/head/share/dict/
+Text file "words.txt" is currently too large to be previewed on Git Hub.
+You are still able to open the raw version on your browser. It contains a list of American English words, which you may download and use as you please. Credit belongs to author of: http://svnweb.freebsd.org/base/head/share/dict/
 
